[package]
name = "wikipedia_roots"
version = "0.1.0"
authors = ["Leandro Silva <leandrodoze@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10.6", features = ["blocking"] }
url = "2.1.1"